--- a/.github/workflows/azure-pipelines.yml
+++ b/.github/workflows/azure-pipelines.yml
@@ -3,8 +3,20 @@
   "on": {
     "workflow_dispatch": null
   },
+  "inputs": {
+    "runnerIds" : {
+      "description": "List of comma separated integer ids for the runners."
+      "required": true,
+      "default": "1, 2"
+    }
+  },
   "jobs": {
     "build": {
+      "strategy": {
+        "matrix": {
+          "runnerId": ${{ fromJson('[' + inputs.runnerIds + ']') }}
+        }
+      },
       "runs-on": "windows-latest",
       "steps": [
         {
