--- a/.github/workflows/azure-pipelines.yml
+++ b/.github/workflows/azure-pipelines.yml
@@ -4,7 +4,7 @@
     "workflow_dispatch": {
       "inputs": {
         "runnerIds" : {
-          "description": "List of comma separated integer ids for the runners."
+          "description": "List of comma separated integer ids for the runners.",
           "required": true,
           "default": "1, 2"
         }
