--- a/.github/workflows/azure-pipelines.yml
+++ b/.github/workflows/azure-pipelines.yml
@@ -15,7 +15,7 @@
     "build": {
       "strategy": {
         "matrix": {
-          "runnerId": "${{ fromJson('[' + inputs.runnerIds + ']') }}"
+          "runnerId": "${{ fromJSON(join(' ', [ '[', inputs.runnerIds, ']' ])) }}"
         }
       },
       "runs-on": "windows-latest",
