Give workflow an id.

--- a/.github/workflows/azure-pipelines.yml
+++ b/.github/workflows/azure-pipelines.yml
@@ -1,5 +1,6 @@
 {
-  "name": "Manual Workflow",
+  "name": "RunnerDispatch",
+  "id": "runnerdispatch",
   "on": {
     "workflow_dispatch": {
       "inputs": {
