--- a/.github/workflows/runnerdispatch.yml
+++ b/.github/workflows/runnerdispatch.yml
@@ -1,6 +1,6 @@
 {
   "name": "RunnerDispatch",
-  "run-name": "Agents for ${{ inputs.buildNumber }} by @${{ github.actor }}",
+  "run-name": "Agents for ${{ inputs.buildNumber }}",
   "on": {
     "workflow_dispatch": {
       "inputs": {
