--- a/.github/workflows/runnerdispatch.yml
+++ b/.github/workflows/runnerdispatch.yml
@@ -13,6 +13,11 @@
           "description": "The requesting pipeline build number.",
           "required": true,
           "default": "unknown"
+        },
+        "image" : {
+          "description": "The vm image to run the agent with.",
+          "required": true,
+          "default": "windows-latest"
         }
       }
     }
@@ -24,7 +29,7 @@
           "runnerId": "${{ fromJSON(format('[{0}]', inputs.runnerIds)) }}"
         }
       },
-      "runs-on": "windows-latest",
+      "runs-on": "${{ inputs.image }}",
       "steps": [
         {
           "name": "Checkout repository",
@@ -36,6 +41,8 @@
             "AZP_URL": "${{ secrets.AZP_URL }}",
             "AZP_TOKEN": "${{ secrets.AZP_TOKEN }}",
             "AZP_POOL": "RunnerPool",
+            "TAG_IMAGE": "${{ inputs.image }}",
+            "TAG_BUILD_NUMBER": "${{ inputs.buildNumber }}",
             "AZP_WORK": "C:/azdev/agent",
           },
           "run": "Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass\n./startup.ps1\n"
