--- a/.github/workflows/runnerdispatch.yml
+++ b/.github/workflows/runnerdispatch.yml
@@ -6,7 +6,7 @@ on:
       runnerIds:
         description: "List of comma separated integer ids for the runners."
         required: true
-        default: "1, 2"
+        default: "1"
       buildNumber:
         description: "The requesting pipeline build number."
         required: true
