--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         d0: [0,1,2,3,4,5,6,7,8,9]
         d1: [0,1]
-    uses: ./testmatrix.job.yml
+    uses: ./testmatrix.job.yml@main
     with:
       jobCount: ${{ inputs.jobCount }}
       jobIndex: ${{ matrix.d1 }}${{ matrix.d2 }}
