--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -21,5 +21,5 @@ jobs:
         d1: [0,1]
     uses: ./.github/workflows/testmatrix.job.yml
     with:
-      jobCount: ${{ inputs.jobCount }}
+      jobCount: 1
       jobIndex: ${{ strategy.job-index }}
