--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   build:
     strategy:
+      max-parallel: ${{ inputs.parallelism }}
       matrix:
         d0: [0,1,2,3,4,5,6,7,8,9]
         d1: [0,1]
