--- a/AzDevAgentRunner/src/AzDevAgentRunner.csproj
+++ b/AzDevAgentRunner/src/AzDevAgentRunner.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <DebugType>embedded</DebugType>
+    <LangVersion>latest</LangVersion>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
