--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -1,6 +1,16 @@
 on:
   workflow_call:
     inputs:
+      envName:
+        description: "Name of environment."
+        required: true
+        type: string
+        default: 'testenv'
+      sharedVarName:
+        description: "Name of environment variable used to coordinate."
+        required: true
+        type: string
+        default: 'jobindexvar'
       jobCount:
         description: "List of comma separated integer ids for the runners."
         required: true
@@ -11,10 +21,32 @@ on:
         type: number
 jobs:
   build:
-    if: ${{ inputs.jobIndex < inputs.jobCount }}
+    # if: ${{ inputs.jobIndex < inputs.jobCount }}
     runs-on: ubuntu-latest
     steps:
+      - name: Setup environment
+        shell: pwsh
+        env: 
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.event.repository.name }}
+          OWNER: ${{ github.repository_owner }}
+          SHARED_VAR: ${{ github.repository_owner }}
+        run: |
+          Write-Host ${{ inputs.jobIndex }}
+          Write-Host Env eval ${{ env[inputs.sharedVarName] }}
+          Write-Host Env SHARED_VAR=$Env:SHARED_VAR
+v
+          if (${{ inputs.jobIndex }} -ge < inputs.jobCount }}) {
+            gh api `
+              --method POST `
+              -H "Accept: application/vnd.github+json" `
+              -H "X-GitHub-Api-Version: 2022-11-28" `
+              "/repos/$Env:OWNER/$Env:REPO/environments/${{ inputs.envName }}/variables" `
+              -f "name=${{ inputs.sharedVarName }}" -f "value=${{ inputs.jobIndex }}"
+          }
+
       - name: "Run Agent"
         shell: pwsh
         run: |
+          Write-Host Env ${{ env[inputs.sharedVarName] }}
           Write-Host ${{ inputs.jobIndex }}
