--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -11,15 +11,18 @@ on:
       parallelism:
         description: "The requesting pipeline build number."
         required: true
-        default: 10
+        default: 2
         type: number
 jobs:
+  setup:
+
+
   build:
     strategy:
       max-parallel: ${{ fromJSON(inputs.parallelism) }}
       matrix:
-        d0: [0,1,2,3,4,5,6,7,8,9]
-        d1: [0,1,2,3]
+        d0: [0,1]
+        d1: [0,1]
     uses: ./.github/workflows/testmatrix.job.yml
     with:
       jobCount: ${{ fromJSON(inputs.jobCount) }}
