--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -33,7 +33,7 @@ jobs:
           Write-Host ${{ inputs.jobIndex }}
           Write-Host Env eval ${{ env[inputs.sharedVarName] }}
           Write-Host Env SHARED_VAR=$Env:SHARED_VAR
-          if (${{ inputs.jobIndex }} -ge < inputs.jobCount }}) {
+          if (${{ inputs.jobIndex }} -ge ${{ inputs.jobCount }}) {
             gh api `
               --method POST `
               -H "Accept: application/vnd.github+json" `
