--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -32,10 +32,11 @@ jobs:
         run: |
           Write-Host ${{ inputs.jobIndex }}
           Write-Host Env eval ${{ env[inputs.sharedVarName] }}
+          Write-Host Env eval ${{ env.jobindexvar }}
           Write-Host Env SHARED_VAR=$Env:SHARED_VAR
           if (${{ inputs.jobIndex }} -ge ${{ inputs.jobCount }}) {
             gh api `
-              --method POST `
+              --method PATCH `
               -H "Accept: application/vnd.github+json" `
               -H "X-GitHub-Api-Version: 2022-11-28" `
               "/repos/$Env:OWNER/$Env:REPO/environments/${{ inputs.envName }}/variables" `
@@ -45,5 +46,6 @@ jobs:
       - name: "Run Agent"
         shell: pwsh
         run: |
+          Write-Host Env eval ${{ env.jobindexvar }}
           Write-Host Env ${{ env[inputs.sharedVarName] }}
           Write-Host ${{ inputs.jobIndex }}
