--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -20,8 +20,11 @@ on:
 jobs:
   build:
     # if: ${{ inputs.jobIndex < inputs.jobCount }}
-    permissions: write-all
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
       - name: Setup environment
         shell: pwsh
