--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -14,13 +14,13 @@ on:
         default: 2
         type: number
 jobs:
-  build:
+  stage:
     strategy:
       max-parallel: ${{ fromJSON(inputs.parallelism) }}
       matrix:
-        d0: [0,1]
-        d1: [0,1]
+        threadIndex: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30]
     uses: ./.github/workflows/testmatrix.job.yml
     with:
+      parallelism: ${{ fromJSON(inputs.parallelism) }}
       jobCount: ${{ fromJSON(inputs.jobCount) }}
       jobIndex: ${{ strategy.job-index }}
