--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -8,7 +8,7 @@ on:
         description: "Input environment."
         type: string
         default: '{}'
-      jobIndex:
+      jobCount:
         description: "The requesting pipeline build number."
         required: true
         type: number
@@ -17,7 +17,6 @@ env: ${{ fromJson(inputs.env) }}
 
 jobs:
   run:
-    if: ${{ inputs.jobIndex < inputs.jobCount }}
     outputs:
       stopjobthread: ${{ steps.runstep.output.stobjobthread }}
     runs-on: ubuntu-latest
