--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -29,7 +29,7 @@ jobs:
         name: "Reserve and Run Agent"
         shell: pwsh
         env:
-          NEEDS: ${{ input.needs }}
+          NEEDS: ${{ inputs.needs }}
         run: |
           echo "hasmorejobs=false" >> $Env:GITHUB_OUTPUT
           GetChildItem Env:
