--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -28,9 +28,10 @@ jobs:
       - id: runstep
         name: "Reserve and Run Agent"
         shell: pwsh
-        env:
-          NEEDS: ${{ inputs.needs }}
         run: |
+          $needs = @'
+            ${{ inputs.needs }}
+          '@
           echo "hasmorejobs=false" >> $Env:GITHUB_OUTPUT
           Get-ChildItem Env:
     
