--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -22,7 +22,7 @@ env: ${{ fromJson(inputs.env) }}
 jobs:
   run:
     outputs:
-      hasmorejobs: ${{ steps.runstep.output.hasmorejobs }}
+      hasmorejobs: hello
     runs-on: ubuntu-latest
     steps:
       - id: runstep
