--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -30,6 +30,7 @@ jobs:
         shell: pwsh
         run: |
           $needs = @'
+            $Env:parallelism
             ${{ env.parallelism }}
           '@
           echo "needs=$needs"
