--- a/.github/workflows/testmatrix.yml
+++ b/.github/workflows/testmatrix.yml
@@ -13,6 +13,10 @@ on:
         required: true
         default: 2
         type: number
+      image:
+        description: "The vm image to run the agent with."
+        required: true
+        default: "windows-latest"
 jobs:
   stage:
     strategy:
