--- a/.github/workflows/testmatrix.job.yml
+++ b/.github/workflows/testmatrix.job.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           $needs = @'
             ${{ env.parallelism }}
+            ${{ secrets.AZP_URL }}
           '@
           echo "needs=$needs"
           echo "hasmorejobs=false" >> $Env:GITHUB_OUTPUT
