--- a/.azdev/run-with-agents.invoke.yml
+++ b/.azdev/run-with-agents.invoke.yml
@@ -18,14 +18,6 @@ parameters:
   - westus
   - eastus
   - northcentralus
-- name: runnerIds
-  type: object
-  default: 
-    - '0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,'
-    - '20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,'
-    - '40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,'
-    - '60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,'
-    - '80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99'
 - name: jobName
   type: string
 
@@ -45,10 +37,10 @@ jobs:
             "ref": "main",
             "inputs": {
               "buildNumber": "$(Build.DefinitionName) - $(Build.BuildNumber) - $(System.CollectionUri)$(System.TeamProject)/_build/results?buildId=$(Build.BuildId)",
-              "runnerIds": "${{ split(replace(join(',', parameters.runnerIds), format(',{0},', parameters.workers), '|'), '|')[0] }}",
+              "jobCount": "${{ parameters.jobCount }}",
               "pool": "${{ parameters.pool }}",
               "image": "${{ parameters.image }}",
-              "azureRegion": "${{ replace(parameters.azureRegion, '*', '') }}"
+              "targetAzureRegion": "${{ replace(parameters.azureRegion, '*', '') }}"
               "token": "$(System.AccessToken)",
               "taskId": "$(System.TaskInstanceId)",
               "taskUrl": "$(System.CollectionUri)$(System.TeamProject)?buildId=$(Build.BuildId)&jobId=$(System.JobId)&planId=$(System.PlanId)&taskId=$(System.TaskInstanceId)&timelineId=$(System.TimelineId)"
